--- a/src/index.css
+++ b/src/index.css
@@ -329,8 +329,6 @@ h2, p{
   }
 }
 
-
-
 /* Testimonials */
 .testimonials-title h1{
   color: black;
@@ -342,6 +340,7 @@ h2, p{
   display: flex;
   justify-content: center;
   gap: 1.75rem;
+  margin-bottom: 10rem;
 }
 .testimonials-cards .cartao{
   background-color: var(--green);
@@ -413,5 +412,117 @@ h2, p{
   }
   .testimonials-cards h4{
     margin-top: 0.75rem;
+  }
+}
+/* About */
+.about-section{
+  width: 100%;
+  height: 416px;
+  margin-top: 900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-color: var(--green);
+  font-family: var(--font-markazi);
+  position: relative;
+}
+.about-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  margin-right: 10rem;
+}
+.about-right h1{
+  color: var(--yellow);
+  font-family: var(--font-markazi);
+  font-size: 54px;
+  margin-bottom: 0;
+}
+.about-right h2{
+  color: white;
+  font-size: 30px;
+  font-weight: 100;
+  margin: 0;
+}
+.about-right h1,
+.about-right h2 {
+  line-height: .7;
+  margin: 0;
+}
+.about-right p{
+  font-family: var(--font-karla);
+  color: white;
+  width: 393px;
+  font-size: 18px;
+  font-weight: 0;
+  margin-top: 1rem;
+  font-weight: 300;
+}
+.image-stack {
+  position: relative;
+  width: 600px;
+  height: auto;
+  margin-left: 9.3rem;
+  margin-top: 2.8rem;
+
+}
+
+.img-base { /*Comida*/
+  width: 454.44px;
+  height: 303px;
+  border-radius: 16px;
+  display: block;
+}
+
+.img-top {/*MarioAdrian*/
+  position: absolute;
+  width: 400.45px;
+  height: 267px;
+  border-radius: 16px;
+  top: -40px;     
+  left: -40px;  
+  z-index: 2;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+@media (max-width: 768px) {
+  .about-section {
+    flex-direction: column;
+    padding: 2rem 1rem;
+    height: auto;
+    text-align: center;
+  }
+
+  .about-right {
+    margin: 2rem 0 0 0;
+    align-items: center;
+  }
+
+  .about-right p {
+    width: 100%;
+    max-width: 350px;
+  }
+
+  .about-left {
+    margin-bottom: 2rem;
+  }
+
+  .image-stack {
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+  }
+
+  .img-base {
+    width: 100%;
+    height: auto;
+  }
+
+  .img-top {
+    width: 80%;
+    height: auto;
+    top: -30px;
+    left: -20px;
   }
 }
